labs/07-exposing-frontends-and-backends/ingress-back.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-back
  namespace: group-name
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: api.labs-fwjyss.walmartdigital.cl
    http:
      paths:
      - path: /zzz
        backend:
          serviceName: xxx
          servicePort: yyy
