labs/07-exposing-frontends-and-backends/ingress-front.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-front
  namespace: tepaseomondini
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: tepaseomondini.labs-rneaxc.walmartdigital.cl
    http:
      paths:
      - path: /
        backend:
          serviceName: hello
          servicePort: 80
      - path: /login
        backend:
          serviceName: auth
          servicePort: 80
